<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"

    android:layout_height="fill_parent"

    android:layout_gravity="center_horizontal"

    android:background="@drawable/info_bg"

    android:gravity="center_horizontal"

    android:orientation="vertical"

    android:paddingTop="20dip">


    <TextView

        android:id="@+id/program_info"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:gravity="center|top"

        android:text="@string/photo_info"

        android:textSize="20sp" />


    <RelativeLayout

        android:id="@+id/filename_rl"

        android:layout_width="fill_parent"

        android:layout_height="wrap_content"

        android:layout_below="@id/program_info">


        <TextView

            android:id="@+id/filename"

            android:layout_width="150dip"

            android:layout_height="wrap_content"

            android:gravity="right"

            android:paddingTop="25dip"

            android:paddingRight="15dip"

            android:text="@string/file_name"

            android:textSize="15sp" />


        <TextView

            android:id="@+id/file_name"

            android:layout_width="650dip"

            android:layout_height="wrap_content"

            android:layout_toRightOf="@+id/filename"

            android:paddingTop="25dip"

            android:textSize="15sp" />

    </RelativeLayout>


    <RelativeLayout

        android:id="@+id/duration_rl"

        android:layout_width="fill_parent"

        android:layout_height="wrap_content"

        android:layout_below="@+id/filename_rl">


        <TextView

            android:id="@+id/duration_tv"

            android:layout_width="150dip"

            android:layout_height="wrap_content"

            android:gravity="right"

            android:paddingTop="15dip"

            android:paddingRight="15dip"

            android:text="@string/file_create_time"

            android:textSize="15sp" />


        <TextView

            android:id="@+id/duration"

            android:layout_width="350dip"

            android:layout_height="wrap_content"

            android:layout_toRightOf="@+id/duration_tv"

            android:paddingTop="15dip"

            android:textSize="15sp" />

    </RelativeLayout>


    <RelativeLayout

        android:id="@+id/filesize_rl"

        android:layout_width="fill_parent"

        android:layout_height="wrap_content"

        android:layout_below="@id/duration_rl">


        <TextView

            android:id="@+id/filesize"

            android:layout_width="150dip"

            android:layout_height="wrap_content"

            android:gravity="right"

            android:paddingTop="15dip"

            android:paddingRight="15dip"

            android:text="@string/file_size"

            android:textSize="15sp" />


        <TextView

            android:id="@+id/file_zise"

            android:layout_width="650dip"

            android:layout_height="wrap_content"

            android:layout_toRightOf="@+id/filesize"

            android:paddingTop="15dip"

            android:textSize="15sp" />

    </RelativeLayout>


    <RelativeLayout

        android:id="@+id/fileformat_rl"

        android:layout_width="fill_parent"

        android:layout_height="wrap_content"

        android:layout_below="@id/filesize_rl">


        <TextView

            android:id="@+id/fileformat"

            android:layout_width="150dip"

            android:layout_height="wrap_content"

            android:gravity="right"

            android:paddingTop="15dip"

            android:paddingRight="15dip"

            android:text="@string/file_format"

            android:textSize="15sp" />


        <TextView

            android:id="@+id/file_format"

            android:layout_width="650dip"

            android:layout_height="wrap_content"

            android:layout_toRightOf="@+id/fileformat"

            android:paddingTop="15dip"

            android:paddingBottom="15dip"

            android:textSize="15sp" />

    </RelativeLayout>


</RelativeLayout>